Fix mobile view and add dark mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
   SRI hash calculated by https://beautifycode.net/sri-hash-generator
 */
 
+/* The 16-bit Network bar */
 @font-face {
   font-family: 'IBM VGA 9x16';
   src: url('fonts/ibm-vga-9x16/Web437_IBM_VGA_9x16.woff') format('woff'),
@@ -12,6 +13,54 @@
   font-display: swap;
 }
 
+.network-bar {
+  position: relative;
+  margin-bottom: 50px;
+  padding: 10px 0;
+  background-color: #000;
+  color: #fff;
+  font-family: 'IBM VGA 9x16', monospace;
+}
+
+.network-name {
+  position: absolute;
+  left: 20px;
+}
+
+.network-links {
+  position: absolute;
+  right: 20px;
+}
+
+.network-bar a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.network-bar a::before, .network-bar a::after {
+  content: '\a0\a0';
+}
+
+.network-bar a:hover::before, .network-bar a:focus::before, .network-current-site::before {
+  content: '> ';
+}
+
+.network-bar a:hover::after, .network-bar a:focus::after, .network-current-site::after {
+  content: ' <';
+}
+
+@media only screen and (max-width: 720px) {
+  .network-name, .network-links {
+    position: relative;
+    left: 20px;
+  }
+
+  .network-bar a, .network-current-site {
+    display: block;
+  }
+}
+
+/* Fonts */
 @font-face {
   font-family: 'Bw Gradual';
   src: url('fonts/bw-gradual-bold/BwGradual-Bold.woff2') format('woff2'),
@@ -50,43 +99,9 @@
 
 body {
   margin-bottom: 50px;
+  background-color: #dcdcdc;
+  color: #212121;
   font-family: 'Bw Gradual', sans-serif;
-}
-
-header {
-  position: relative;
-  margin-bottom: 50px;
-  padding: 10px 0;
-  background-color: #000;
-  color: #fff;
-  font-family: 'IBM VGA 9x16', monospace;
-}
-
-.network-name {
-  position: absolute;
-  left: 20px;
-}
-
-.network-links {
-  position: absolute;
-  right: 20px;
-}
-
-.network-links a::before, .network-links a::after {
-  content: '\a0\a0';
-}
-
-.network-links a:hover::before, .network-links a:focus::before, .network-current-site::before {
-  content: '> ';
-}
-
-.network-links a:hover::after, .network-links a:focus::after, .network-current-site::after {
-  content: ' <';
-}
-
-header a {
-  color: #fff;
-  text-decoration: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -108,7 +123,7 @@ hgroup p {
   font-weight: bold;
 }
 
-main a {
+.container a {
   display: inline-block;
   margin: 0 10px 10px 0;
   padding: 10px;
@@ -118,7 +133,7 @@ main a {
   box-shadow: 10px 10px 0 #ccc;
 }
 
-main a:hover, main a:focus {
+.container a:hover, .container a:focus {
   background-color: #ef409e;
 }
 
@@ -148,4 +163,12 @@ main a:hover, main a:focus {
 
 .timeline p, .timeline h3 {
   padding-left: 20px;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    color-scheme: dark;
+    background-color: #212121;
+    color: #dcdcdc;
+  }
 }
